# Calculas-Vector-Field-Simulator

./: CMakeLists.txt
src/: Main.cpp  ParsingEquation.cpp  ParsingEquation.hpp  PolarQuard.hpp  Representator.cpp  Representator.hpp
